deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: petclinic
  annotations:
    fluxcd.io/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: harbor.lab.home/library/petclinic:b2.20200726.040127
        ports:
        - containerPort: 8080
