service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: petclinic
spec:
  selector:
    app: petclinic
  ports:
    - name: http
      protocol: TCP
      port: 8080
